# vigilant-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs  logger.rs  logger_builder.rs  types.rs
src/adapters/: adapter_env_logger.rs  adapter_env_logger_builder.rs  adapter_tracing.rs  adapter_tracing_builder.rs  mod.rs
